--- a/event.html
+++ b/event.html
@@ -276,7 +276,7 @@
                         "start_date": "",
                         "end_date": "",
                         "event_date": "",
-                        "organizer": "",
+                        "host": "",
                         "co_organizer": "",
                         "image_1": "",
                         "link": "",
