--- a/event_01.html
+++ b/event_01.html
@@ -77,7 +77,7 @@
             <div id="top"></div>
             <div class="event-inner-header">
                 <div class="event-inner-cover"
-                    :style="{ backgroundImage: `url( ${('http://127.0.0.1/foundation/foundation_laravel/storage/app/public/event/' + apiResult.data.image_1)} )` }">
+                    :style="{ backgroundImage: `url( ${(url_event_img + apiResult.data.image_1)} )` }">
                 </div>
                 <div class="event-title">
                     <div class="event-title-L">
@@ -87,7 +87,8 @@
                         <h1>2022</h1>
                         <h1>{{apiResult.data.title}}</h1>
                     </div>
-                    <a href="#" class="sign-area"><button class="btn-sign">前往報名</button></a>
+                    <a href="#" class="sign-area" v-if="Date.parse(apiResult.data.event_date) > new Date()"><button
+                            class="btn-sign">前往報名</button></a>
                 </div>
                 <table class="event-title-table">
                     <tr>
@@ -121,48 +122,34 @@
                     <h5>
                         活動時間：{{apiResult.data.event_date}}
                         <br>報名截止日期：{{apiResult.data.end_date}}
-                        <br>地點：亞東科技大學
+                        <br>地點：{{apiResult.data.address}}
                     </h5>
                 </div>
                 <div class="col-lg-2 col-md-2 col-1"></div>
             </div>
             <div class="row">
-                <div class="col-lg-2 col-md-1 col-0">{{apiResult.data.image_1}}</div>
+                <div class="col-lg-2 col-md-1 col-0"></div>
                 <div class="col-lg-8 col-md-10 col-12 event-pic-contain">
-                    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-                        <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <img src="img/events/01/eyes_poster.jpg" class="d-block w-100" alt="...">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="img/cul.png" class="d-block w-100" alt="...">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="img/events/01/eyes_poster.jpg" class="d-block w-100" alt="...">
-                            </div>
-                        </div>
-                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
-                            data-bs-slide="prev">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Previous</span>
-                        </button>
-                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
-                            data-bs-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Next</span>
-                        </button>
-                    </div>
-                    <!--<div class="lazy">
+                    <div class="lazy">
                         <div>
-                            <img class="lazy-img" :data-lazy="('img/cul.png')" />
+                            <img class="lazy-img" :data-lazy="('img/events/01/eyes_poster.jpg')" />
                         </div>
                         <div>
                             <img class="lazy-img" :data-lazy="('img/events/01/eyes_poster.jpg')" />
                         </div>
                         <div>
-                            <img class="lazy-img" :data-lazy="('img/edu.png')" />
+                            <img class="lazy-img" :data-lazy="('img/events/01/eyes_poster.jpg')" />
                         </div>
-                    </div>-->
+                        <div>
+                            <img class="lazy-img" :data-lazy="('img/events/01/eyes_poster.jpg')" />
+                        </div>
+                        <div>
+                            <img class="lazy-img" :data-lazy="('img/events/01/eyes_poster.jpg')" />
+                        </div>
+                        <div>
+                            <img class="lazy-img" :data-lazy="('img/events/01/eyes_poster.jpg')" />
+                        </div>
+                    </div>
                 </div>
                 <div class="col-lg-2 col-md-1 col-0"></div>
             </div>
@@ -403,15 +390,20 @@
                 var getUrlString = location.href;
                 var url = new URL(getUrlString);
                 var id = url.searchParams.get('id');
+                var url_event = 'http://127.0.0.1/foundation/foundation_laravel/public/api/event/';
+                var url_event_img = '../foundation_laravel/storage/app/public/event/';
 
-                const apiResult = reactive({
+                apiResult = reactive({
                     data: [{
                         "id": "",
                         "title": "",
                         "content": "",
+                        "host": "",
+                        "co_organizer": "",
                         "start_date": "",
                         "end_date": "",
                         "event_date": "",
+                        "address": "",
                         "image_1": "",
                         "link": "",
                         "type": "",
@@ -419,13 +411,13 @@
                     }]
                 });
                 axios
-                    .get("http://127.0.0.1/foundation/foundation_laravel/public/api/event/" + id)
+                    .get(url_event + id)
                     .then((res) => {
                         apiResult.data = res.data
                         console.log(apiResult.data)
                     })
                     .catch((error) => console.log(error));
-                return { apiResult }
+                return { apiResult, url_event_img }
             },
             methods: {
                 formatDate(dateString) {
