--- a/news.html
+++ b/news.html
@@ -76,22 +76,19 @@
                     <div class="switch-field">
                         <input type="radio" id="radio-one" name="switch" value="all" checked @click="gettype('')" />
                         <label for="radio-one">全部</label>
-                        <input type="radio" id="radio-two" name="switch" value="green"
-                            @click="gettype('/type/green')" />
+                        <input type="radio" id="radio-two" name="switch" value="green" @click="gettype('type/green')" />
                         <label for="radio-two">環保</label>
-                        <input type="radio" id="radio-three" name="switch" value="care"
-                            @click="gettype('/type/care')" />
+                        <input type="radio" id="radio-three" name="switch" value="care" @click="gettype('type/care')" />
                         <label for="radio-three">長照</label>
                         <input type="radio" id="radio-four" name="switch" value="build"
-                            @click="gettype('/type/build')" />
+                            @click="gettype('type/build')" />
                         <label for="radio-four">建築</label>
                     </div>
                 </div>
                 <div class="col-lg-12 col-md-12 col-12 news-main-area">
                     <div class="news-main-contain" data-aos="fade-left" data-aos-delay="100"
                         v-for="item in apiResult.data">
-                        <div class="news-img-div"
-                            :style="{ backgroundImage: `url( ${('http://127.0.0.1/foundation/foundation_laravel/storage/app/public/news/' + item.image)} )` }">
+                        <div class="news-img-div" :style="{ backgroundImage: `url( ${(url_news_img + item.image)} )` }">
                             <a href="#" @click="link(item.id)">
                                 <div class="news-mask">
                                     <p>閱讀更多</p>
@@ -178,12 +175,16 @@
     <script>
 
         const { reactive } = Vue;
+        var url_news = 'http://127.0.0.1/foundation/foundation_laravel/public/api/news/';
+        var url_news_img = '../foundation_laravel/storage/app/public/news/';
         const app = {
             created() {
             },
             setup() {
                 var text = '';
-                const apiResult = reactive({
+
+
+                apiResult = reactive({
                     data: [{
                         "id": "",
                         "title": "",
@@ -194,24 +195,24 @@
                     }]
                 })
                 axios
-                    .get("http://127.0.0.1/foundation/foundation_laravel/public/api/news")
+                    .get(url_news)
                     .then((res) => {
                         apiResult.data = res.data.reverse()
                     })
                     .catch((error) => console.log(error));
-                return { apiResult }
+                return { apiResult, url_news_img }
             },
             methods: {
                 gettype(type) {
+                    console.log(type);
                     axios
-                        .get("http://127.0.0.1/foundation/foundation_laravel/public/api/news" + type)
+                        .get(url_news + type)
                         .then((res) => {
                             apiResult.data = res.data.reverse()
                             console.log(apiResult.data);
                         })
                         .catch((error) => console.log(error));
-                    return apiResult
-
+                    return { apiResult }
                 },
                 link(id) {
                     text = 'news_01.html?id=' + id + '';
