--- a/event_01.html
+++ b/event_01.html
@@ -76,9 +76,8 @@
         <main id="app">
             <div id="top"></div>
             <div class="event-inner-header">
-                <div class="event-inner-cover"
-                    :style="{ backgroundImage: `url( ${(url_event_img + apiResult.data.image_1)} )` }">
-                </div>
+                <div class="event-inner-cover event-inner-cover01"
+                    :style="{ backgroundImage: `url( ${(url_event_img + apiResult.data.image_1)} )` }"></div>
                 <div class="event-title">
                     <div class="event-title-L">
                         <a href="event.html"><button class="event-arrow">
@@ -87,8 +86,8 @@
                         <h1>2022</h1>
                         <h1>{{apiResult.data.title}}</h1>
                     </div>
-                    <a href="#" class="sign-area" v-if="Date.parse(apiResult.data.event_date) > new Date()"><button
-                            class="btn-sign">前往報名</button></a>
+                    <a href="#" class="sign-area"><button class="btn-sign"
+                            v-if="Date.parse(apiResult.data.event_date) > new Date()">前往報名</button></a>
                 </div>
                 <table class="event-title-table">
                     <tr>
@@ -130,24 +129,18 @@
             <div class="row">
                 <div class="col-lg-2 col-md-1 col-0"></div>
                 <div class="col-lg-8 col-md-10 col-12 event-pic-contain">
-                    <div class="lazy">
+                    <div class="autoplay">
                         <div>
-                            <img class="lazy-img" :data-lazy="('img/events/01/eyes_poster.jpg')" />
+                            <img class="autoplay-img" v-bind:src="(img_1)" />
                         </div>
                         <div>
-                            <img class="lazy-img" :data-lazy="('img/events/01/eyes_poster.jpg')" />
+                            <img class="autoplay-img" v-bind:src="(img_2)" />
                         </div>
                         <div>
-                            <img class="lazy-img" :data-lazy="('img/events/01/eyes_poster.jpg')" />
+                            <img class="autoplay-img" v-bind:src="(img_3)" />
                         </div>
                         <div>
-                            <img class="lazy-img" :data-lazy="('img/events/01/eyes_poster.jpg')" />
-                        </div>
-                        <div>
-                            <img class="lazy-img" :data-lazy="('img/events/01/eyes_poster.jpg')" />
-                        </div>
-                        <div>
-                            <img class="lazy-img" :data-lazy="('img/events/01/eyes_poster.jpg')" />
+                            <img class="autoplay-img" v-bind:src="(img_4)" />
                         </div>
                     </div>
                 </div>
@@ -384,16 +377,20 @@
 
         const { reactive } = Vue;
         const app = {
+            beforeCreate() {
+                console.log("sadf");
+                sessionStorage.clear();
+            },
+            methods: {
+                formatDate(dateString) {
+                    const date = dayjs(dateString);
+                    return date.format('YYYY/MM/D');
+                }
+            },
             created() {
             },
             setup() {
-                var getUrlString = location.href;
-                var url = new URL(getUrlString);
-                var id = url.searchParams.get('id');
-                var url_event = 'http://127.0.0.1/foundation/foundation_laravel/public/api/event/';
-                var url_event_img = '../foundation_laravel/storage/app/public/event/';
-
-                apiResult = reactive({
+                var apiResult = reactive({
                     data: [{
                         "id": "",
                         "title": "",
@@ -405,28 +402,39 @@
                         "event_date": "",
                         "address": "",
                         "image_1": "",
+                        "image_2": "",
+                        "image_3": "",
+                        "image_4": "",
                         "link": "",
                         "type": "",
                         "created_at": ""
                     }]
                 });
+                var getUrlString = location.href;
+                var url = new URL(getUrlString);
+                var id = url.searchParams.get('id');
+                var url_event = 'http://127.0.0.1/foundation/foundation_laravel/public/api/event/';
+                var url_event_img = '../foundation_laravel/storage/app/public/event/';
                 axios
                     .get(url_event + id)
                     .then((res) => {
                         apiResult.data = res.data
                         console.log(apiResult.data)
+                        sessionStorage.setItem("image_1", apiResult.data.image_1);
+                        sessionStorage.setItem("image_2", apiResult.data.image_2);
+                        sessionStorage.setItem("image_3", apiResult.data.image_3);
+                        sessionStorage.setItem("image_4", apiResult.data.image_4);
                     })
                     .catch((error) => console.log(error));
-                return { apiResult, url_event_img }
-            },
-            methods: {
-                formatDate(dateString) {
-                    const date = dayjs(dateString);
-                    return date.format('YYYY/MM/D');
-                }
+                var img_1 = url_event_img + sessionStorage.getItem("image_1");
+                var img_2 = url_event_img + sessionStorage.getItem("image_2");
+                var img_3 = url_event_img + sessionStorage.getItem("image_3");
+                var img_4 = url_event_img + sessionStorage.getItem("image_4");
+                return { apiResult, url_event_img, img_1, img_2, img_3, img_4 }
             },
         }
         Vue.createApp(app).mount("#app");
+
         AOS.init();
 
         $(".hover").mouseleave(
@@ -480,13 +488,12 @@
             document.getElementById("GT").textContent = "BACK TO TOP";
         }
 
-        $('.lazy').slick({
-            lazyLoad: 'ondemand',
+        $('.autoplay').slick({
             slidesToShow: 3,
             slidesToScroll: 1,
             arrows: true,
             autoplay: true,
-            autoplaySpeed: 1000,
+            autoplaySpeed: 3000,
             prevArrow: "<img class='event-prev' src='img/L.png'>",
             nextArrow: "<img class='event-next' src='img/R.png'>",
         });
