--- a/event.html
+++ b/event.html
@@ -247,7 +247,7 @@
             setup() {
                 var text = '';
                 var url_event = 'http://127.0.0.1/foundation/foundation_laravel/public/api/event';
-                var url_event_img = '../foundation_laravel/storage/app/public/event/';
+                var url_event_img = 'http://127.0.0.1/foundation/foundation_laravel/storage/app/public/event/';
                 apiResult = reactive({
                     data: [{
                         "id": "",
