--- a/news.html
+++ b/news.html
@@ -176,7 +176,7 @@
 
         const { reactive } = Vue;
         var url_news = 'http://127.0.0.1/foundation/foundation_laravel/public/api/news/';
-        var url_news_img = '../foundation_laravel/storage/app/public/news/';
+        var url_news_img = 'http://127.0.0.1/foundation/foundation_laravel/storage/app/public/news/';
         const app = {
             created() {
             },
