--- a/news_01.html
+++ b/news_01.html
@@ -168,7 +168,7 @@
                 var url = new URL(getUrlString);
                 var id = url.searchParams.get('id');
                 var url_news = 'http://127.0.0.1/foundation/foundation_laravel/public/api/news/';
-                var url_news_img = '../foundation_laravel/storage/app/public/news/';
+                var url_news_img = 'http://127.0.0.1/foundation/foundation_laravel/storage/app/public/news/';
 
                 apiResult = reactive({
                     data: [{
