--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
             setup() {
                 const text = '';
                 var url_news = 'http://127.0.0.1/foundation/foundation_laravel/public/api/news';
-                var url_news_img = '../foundation_laravel/storage/app/public/news/';
+                var url_news_img = 'http://127.0.0.1/foundation/foundation_laravel/storage/app/public/news/';
                 apiResult = reactive({
                     data: [{
                         "id": "",
